iessue fixed #20137 On checkout page apply discount button is not align with input box
iessue fixed #20137 On checkout page apply discount button is not align with input box

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/checkout/_payment-options.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/checkout/_payment-options.less
@@ -69,6 +69,9 @@
 
         .payment-option-content {
             .lib-css(padding, 0 0 @indent__base @checkout-payment-option-content__padding__xl);
+            .action-apply{
+                margin-right: 0;
+            }
         }
 
         .payment-option-inner {
